BOOK-29 resolve warnings